documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CmdAddr(Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CmdAlloc(Int32 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CmdAllocEx(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdBaseRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CmdBaseRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdBaseWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdBaseWr(UInt32 addrval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdClear(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CmdCountRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdCountWr(UInt16 countval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCtrlRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CmdCtrlRd(Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCtrlWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCurrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CmdCurrRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdCurrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdCurrWr(UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdInit(UInt16 opcode, ref UInt16 block);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdInsert@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdInsert(ref UInt16 block, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdMaxRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CmdMaxRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdMaxWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdMaxWr(UInt16 count, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdRd(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdShotWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdShotWr(Int32 value, Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdSkipWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdSkipWr(Int32 value, Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdStackClr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdStackClr(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdStartRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CmdStartRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdStartWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdStartWr(UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdStepWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdStepWr(Int32 value, Int32 index, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdTotalRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdTotalRd(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdTotalWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CmdTotalWr(Int32 countval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CmdWr(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommCall(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommCheck(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommDisable(UInt16 command, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommDisableEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommDisableEx(UInt16 command, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommEnable(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CommRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_CommRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CommWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CommWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CommWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CommWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ConvFromArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ConvFromArinc(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ConvToArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ConvToArinc(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARClr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DARClr(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DARGet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_DARRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_DARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DARSet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DARWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_Div(UInt32 diva, UInt32 divb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DllUsageCount();
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_DPMMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_DPMRdB(UInt32 addrval, UInt32 handleval);
